# notebook-ai

./: .env.example  .gitignore  README.md  pyproject.toml  spec.md
examples/: demo.html  demo.ipynb
notebook_ai/: __init__.py  context.py  display.py  magic.py  syntax.py  tools.py
tests/: __init__.py  test_context.py  test_syntax.py  test_tools.py
